#14733 create a separate mapper for API requests